tests/errors/regexp_decode_invalid.dang
# Decoding an invalid pattern into a Regexp slot fails at materialization
# instead of producing a scalar that breaks at first use.
JSON.decode(`"("`) :: Regexp!
